preflight/impl/tests/ui/fail-arguments.stderr
error: Unknown field: `arg`
  --> $DIR/fail-arguments.rs:12:49
   |
12 | #[avionics_harness(default = "Controller::new", arg = "ument")]
   |                                                 ^^^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-arguments.rs:1:40
  |
1 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
